--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">monitorWiFi</string>
+    <string name="title_activity_legal_notes">Aviso Legal</string>
 </resources>
