--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">monitorWiFi</string>
     <string name="title_activity_legal_notes">Aviso Legal</string>
+    <string name="exportar">Exportar</string>
+    <string name="button">Exportar Dados</string>
 </resources>
