implemntacao da coleta automatizada de dados de conectividade. criacao da classe RefreshInformation que extende a classe Service para coleta de dados e atualizacao das tabelas no banco. Movimentacao dos metodo RefreshInformation da MainActivity para a nova classe. metodos associados foram movidos igualmente. simplificacao da clase mainactivity e do layout. coleta programada para ocorrer a cada 5min. teste ok. TODO: exportar arquivos separados dependendo da conectividade (wifi ou mobile) testar em outros aparelhos.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_legal_notes">Aviso Legal</string>
     <string name="exportar">Exportar</string>
     <string name="button">Exportar Dados</string>
+    <string name="sair">SAIR</string>
 </resources>
