--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="valores_atuais">Valores atuais:</string>
     <string name="intervalo_entre_coletas">Intervalo entre coletas:</string>
     <string name="n_mero_de_coletas_realizadas">Número de coletas realizadas:</string>
+    <string name="n_mero_de_coletas_0">Número de Coletas Mobile: 0</string>
+    <string name="n_mero_de_coletas_wifi">Número de Coletas WiFi: 0</string>
+    <string name="monitor">Monitor:</string>
 </resources>
