--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="n_mero_de_coletas_0">Número de Coletas Mobile: 0</string>
     <string name="n_mero_de_coletas_wifi">Número de Coletas WiFi: 0</string>
     <string name="monitor">Monitor:</string>
+    <string name="per_odo_de_coleta_ms">Período de coleta (ms):</string>
 </resources>
